force-app/main/default/objects/leaseworks__Deal_Team__c/leaseworks__Deal_Team__c.object-meta.xml
<CustomObject>
    <label>Deal Team</label>
    <nameField>
        <label>Deal Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>