force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Department_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>