force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Complete_Message_Enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Complete_Message_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Message Enabled?</label>
    <type>Checkbox</type>
</CustomField>