force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Delay__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Delay__c</fullName>
    <description>Delay between the last time this Deal Team checked Complete and the Revision Start Date on the Deal. When the Deal Team is not Complete this field will be empty</description>
    <label>Delay</label>
    <length>20</length>
    <type>Text</type>
</CustomField>