force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Email__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Email__c</fullName>
    <label>Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>