force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Email_Message_on_New_Revision__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Email_Message_on_New_Revision__c</fullName>
    <label>Email Message on New Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>