force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Final_Notification__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Final_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Notification?</label>
    <type>Checkbox</type>
</CustomField>