force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Activity__c</fullName>
    <label>Deal</label>
    <referenceTo>leaseworks__Marketing_Activity__c</referenceTo>
    <relationshipLabel>Deal Teams</relationshipLabel>
    <relationshipName>Deal_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>