force-app/main/default/objects/leaseworks__Deal_Team__c/fields/leaseworks__Revision_Message_Enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Revision_Message_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Revision Message Enabled?</label>
    <type>Checkbox</type>
</CustomField>