force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Deal_Type__c</fullName>
    <description>Deal type from the parent Deal record</description>
    <formula>TEXT(leaseworks__Marketing_Activity__r.leaseworks__Deal_Type__c)</formula>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>