force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_Exclude_From_Documentation_Approval__c.field-meta.xml
<CustomField>
    <fullName>pro_Exclude_From_Documentation_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude From Documentation Approval</label>
    <type>Checkbox</type>
</CustomField>