force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_Include_In_LOI_Approvals__c.field-meta.xml
<CustomField>
    <fullName>pro_Include_In_LOI_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field checked automatically to include member roles defined withing Deal Team Mapping CMDT as LOI Approvers. Field can be manually unchecked by managers withing the Approval Console.</description>
    <label>LOI Approver?</label>
    <type>Checkbox</type>
</CustomField>