force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_Lease_Documentation_Approver__c.field-meta.xml
<CustomField>
    <fullName>pro_Lease_Documentation_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Deal Team role is required for Lease Documentation approval.</description>
    <label>Lease Documentation Approver?</label>
    <type>Checkbox</type>
</CustomField>