force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_LOI_Approver__c.field-meta.xml
<CustomField>
    <fullName>pro_LOI_Approver__c</fullName>
    <description>Gets checked for records whose role is required for LOI approval</description>
    <formula>IF( OR(Name = &#39;Marketing&#39;, Name = &#39;Technical&#39;, Name = &#39;Legal&#39;, Name = &#39;Compliance&#39;, Name = &#39;Credit&#39;, Name = &#39;Tax&#39;), True, False )</formula>
    <label>LOI Approver?</label>
    <type>Checkbox</type>
</CustomField>