force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_LOI_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>pro_LOI_Approver_Comments__c</fullName>
    <description>Field for users to leave comments when approving an LOI through the Deal Approval Console</description>
    <label>LOI Approver Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>