force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_LOI_Draft_Review__c.field-meta.xml
<CustomField>
    <fullName>pro_LOI_Draft_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOI Draft Review</label>
    <type>Checkbox</type>
</CustomField>