force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_LOI_Signed_Approved__c.field-meta.xml
<CustomField>
    <fullName>pro_LOI_Signed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOI Signed Approved</label>
    <type>Checkbox</type>
</CustomField>