force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_LOI_Signed_Approved_Formula__c.field-meta.xml
<CustomField>
    <fullName>pro_LOI_Signed_Approved_Formula__c</fullName>
    <formula>IF( pro_Include_In_LOI_Approvals__c = False, &#39;NA&#39;,  
    IF( pro_LOI_Signed_Approved__c , &#39;✓&#39;, &#39;&#39;) )</formula>
    <label>LOI Signed Approved</label>
    <type>Text</type>
</CustomField>