force-app/main/default/objects/leaseworks__Deal_Team__c/fields/pro_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>pro_Member_Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pro_Deal_Team_Roles</valueSetName>
    </valueSet>
</CustomField>