force-app/main/default/objects/leaseworks__Deal_Team__c/validationRules/pro_Restrict_Approvals_To_Assigned_User.validationRule-meta.xml
<ValidationRule>
    <fullName>pro_Restrict_Approvals_To_Assigned_User</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

   NOT( $User.Id =  leaseworks__Assigned_To__r.Id ),

OR(


  ISCHANGED( pro_BAC_Approval__c ),
  ISCHANGED( pro_LOI_Signed_Approved__c ) 

 )  
)</errorConditionFormula>
    <errorMessage>Only the Assigned To user can change this field.</errorMessage>
</ValidationRule>